--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,8 @@
 html,
 body {
+  color: white;
   padding: 0;
+  background-color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -9,6 +11,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  margin: 0;
 }
 
 * {
