--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,11 +6,17 @@
   justify-content: center;
   align-items: center;
   padding: 40px 0;
-  height: 100vh;
+
 
   > * {
     &:not(:last-child) {
       margin-bottom: 40px;
+
+      @include breakpoint(l) {
+        font-size: 20px;
+      }
+
+
     }
   }
 
@@ -21,9 +27,10 @@
   p {
     font-size: 38px;
     text-align: center;
+    padding: 0 5px;
 
     @include breakpoint(l) {
-      font-size: 28px;
+      font-size: 24px;
     }
   }
 
