--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -14,6 +14,10 @@
     @else if $class == l {
       @media (max-width: 643px) { @content; }
     }
+
+    @else if $class == xl {
+      @media (max-width: 917px) { @content; }
+    }
    
     @else {
       @warn "Breakpoint mixin supports: xs, sm, md, lg";
