--- a/components/SocialMediaIconContainer.module.scss
+++ b/components/SocialMediaIconContainer.module.scss
@@ -1,49 +1,47 @@
 @import '../styles/mixins.scss';
 
 .container {
-    display: grid;
-    grid-template: "facebook twitter instagram youtube";
-    justify-items: center;
-    align-items: center;
-    grid-gap: 50px;
+	display: grid;
+	grid-template: 'facebook twitter instagram youtube';
+	justify-items: center;
+	align-items: center;
+	grid-gap: 50px;
 
-    @include breakpoint(l) {
-        grid-template-areas:
-        "twitter instagram" "facebook youtube";
-        grid-gap: 30px;
-    }
+	@include breakpoint(l) {
+		grid-template-areas: 'twitter instagram' 'facebook youtube';
+		grid-gap: 30px;
+	}
 
-    img {
-        height: 100px;
+	img {
+		height: 100px;
 
-        @include breakpoint(l) {
-            height: 70px;
-        }
+		@include breakpoint(l) {
+			height: 70px;
+		}
 
-        &:hover {
-            opacity: 60%;
-            cursor: pointer;
-        }
-    }
+		&:hover {
+			opacity: 60%;
+			cursor: pointer;
+		}
+	}
 
-    .invertColor {
-        filter: invert(100%);
-    }
+	.invertColor {
+		filter: invert(100%);
+	}
 
-    .instagramIcon {
-        grid-area: instagram;
-    }
+	.instagramIcon {
+		grid-area: instagram;
+	}
 
-    .facebookIcon {
-        grid-area: facebook;
-    }
+	.facebookIcon {
+		grid-area: facebook;
+	}
 
-    .youtubeIcon {
-        grid-area: youtube;
-    }
+	.youtubeIcon {
+		grid-area: youtube;
+	}
 
-    .twitterIcon {
-        grid-area: twitter;
-    }
+	.twitterIcon {
+		grid-area: twitter;
+	}
 }
-
