--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,25 +1,25 @@
 @mixin breakpoint($class) {
-    @if $class == xs {
-      @media (max-width: 767px) { @content; }
-    }
-   
-    @else if $class == sm {
-      @media (max-width: 768px) { @content; }
-    }
-   
-    @else if $class == md {
-      @media (max-width: 992px) { @content; }
-    }
-   
-    @else if $class == l {
-      @media (max-width: 643px) { @content; }
-    }
-
-    @else if $class == xl {
-      @media (max-width: 917px) { @content; }
-    }
-   
-    @else {
-      @warn "Breakpoint mixin supports: xs, sm, md, lg";
-    }
-  }
+	@if $class == xs {
+		@media (max-width: 767px) {
+			@content;
+		}
+	} @else if $class == sm {
+		@media (max-width: 768px) {
+			@content;
+		}
+	} @else if $class == md {
+		@media (max-width: 992px) {
+			@content;
+		}
+	} @else if $class == l {
+		@media (max-width: 643px) {
+			@content;
+		}
+	} @else if $class == xl {
+		@media (max-width: 917px) {
+			@content;
+		}
+	} @else {
+		@warn "Breakpoint mixin supports: xs, sm, md, lg";
+	}
+}
