--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,22 +1,21 @@
-html,
-body {
-	color: white;
-	padding: 0;
-	background-color: black;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-p {
-	margin: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import "./variables";
 
 * {
 	box-sizing: border-box;
+}
+
+html,
+body {
+	color: white;
+	background-color: $black;
+	padding: 0;
+	height: 100%;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+
+	#__next {
+		height: 100%;
+	}
+
 }
