--- a/components/Navbar/NavbarLinks/NavbarLinks.module.scss
+++ b/components/Navbar/NavbarLinks/NavbarLinks.module.scss
@@ -14,6 +14,11 @@
   text-decoration: none;
 }
 
+.link.activeLink {
+  text-decoration: underline;
+
+}
+
 .tabletContainer {
   justify-content: center;
   flex-direction: column;
