--- a/components/Footer/SocialMediaIconContainer/SocialMediaIconContainer.module.scss
+++ b/components/Footer/SocialMediaIconContainer/SocialMediaIconContainer.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/mixins';
+@import '../../../styles/mixins';
 
 .container {
   display: flex;
@@ -7,6 +7,11 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+
+  a {
+    margin: 0;
+    padding: 0;
+  }
 
   img {
     height: 40px;
