--- a/components/Navbar/NavbarLinks/NavbarLinks.module.scss
+++ b/components/Navbar/NavbarLinks/NavbarLinks.module.scss
@@ -4,19 +4,20 @@
   height: 100%;
   display: flex;
   align-items: center;
+
 }
 
 .link {
   color: $textWhite;
-  text-transform: uppercase;
+  //text-transform: uppercase;
   font-size: 1.3rem;
   font-weight: 500;
   text-decoration: none;
+  font-family: 'Roboto Mono', sans-serif;
 }
 
 .link.activeLink {
   text-decoration: underline;
-
 }
 
 .tabletContainer {
