--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,12 +13,11 @@ body {
 	padding: 0;
 	height: 100%;
 	margin: 0;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Mono', sans-serif;
 
 	#__next {
 		height: 100%;
 	}
-
 }
 
 a {
