--- a/styles/Concerts.module.scss
+++ b/styles/Concerts.module.scss
@@ -6,7 +6,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 100px 40px;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 
 .title {
