--- a/styles/Gallery.module.scss
+++ b/styles/Gallery.module.scss
@@ -1,7 +1,6 @@
 @import "styles/mixins";
 
 .container {
-  padding: 150px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,7 +9,6 @@
   margin: 0 auto;
 
   h1 {
-    font-size: 3rem;
 
     @include underMobileLarge {
       font-size: 2rem;
@@ -31,6 +29,7 @@
   justify-content: center;
   width: 100%;
   grid-gap: 20px;
+  margin-top: 50px;
 
   @include underLaptopLarge {
     grid-template-columns: repeat(3, 300px);
@@ -55,9 +54,11 @@
 
 .postTitle {
   margin: 0;
-  font-size: 3rem;
-
+  font-size: 2.7rem;
+  text-shadow: 0 0 10px #000000;
   text-align: center;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+
 
   @include underLaptopLarge {
     font-size: 2.5rem;
@@ -80,9 +81,15 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  text-decoration: none;
+  filter: sepia(100%);
+
+  .postTitle {
+    filter: none !important;
+  }
 
   &:hover {
     cursor: pointer;
-    opacity: 0.5;
+    filter: none;
   }
 }
