--- a/styles/GallerySubPage.module.scss
+++ b/styles/GallerySubPage.module.scss
@@ -1,15 +1,9 @@
 @import "styles/mixins";
 
 .container {
-  padding: 150px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 50px;
-  }
 
   @include underMobileLarge {
     h1 {
@@ -44,4 +38,26 @@
 .image {
   width: 100%;
   display: block;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.6;
+  }
+}
+
+.viewedImageContainer {
+  display: flex;
+  width: 80%;
+  height: 80%;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%),
+}
+
+.viewedImage {
+  max-width: 100%;
+  max-height: 100%;
 }
