--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -1,7 +1,6 @@
 @import "./mixins";
 
 .container {
-  padding: 150px 0;
   text-align: justify;
   text-justify: auto;
   text-align-last: center;
@@ -43,7 +42,7 @@
       "spotify youtube"
       "apple-music deezer";
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 70px auto 0 auto;
 
   @include underLaptop {
     grid-template-rows: repeat(2, 300px);
