--- a/styles/Concerts.module.scss
+++ b/styles/Concerts.module.scss
@@ -8,6 +8,10 @@
   width: 100%;
   padding-right: 40px;
   padding-left: 40px;
+
+  @include underMobileLarge {
+    padding-top: 100px;
+  }
 }
 
 .title {
