--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/mixins';
+
 .container {
   position: relative;
   min-height: 100%;
@@ -5,4 +7,12 @@
 
 .padding {
   padding-top: 150px;
+
+  @include underTablet {
+    padding-top: 80px;
+  }
+
+  @include underMobileLarge {
+    padding-top: 0;
+  }
 }
