--- a/components/MusicCard/MusicCard.module.scss
+++ b/components/MusicCard/MusicCard.module.scss
@@ -34,7 +34,11 @@ $blurWidth: 10px;
   text-align: center;
 
   @include underTablet {
-    font-size: 3rem;
+    font-size: 2rem;
+  }
+
+  @include underMobileLarge {
+    font-size: 1.5rem;
   }
 }
 
