--- a/styles/Gallery.module.scss
+++ b/styles/Gallery.module.scss
@@ -45,20 +45,21 @@
     grid-template-columns: repeat(2, 200px);
     grid-auto-rows: 200px;
   }
-
   @include underMobileLarge {
-    grid-template-columns: 300px;
-    grid-auto-rows: 300px;
+    grid-template-columns: repeat(2, 140px);
+    grid-auto-rows: 140px;
   }
 }
 
 .postTitle {
   margin: 0;
+  max-width: 100%;
   font-size: 2.7rem;
   text-shadow: 0 0 10px #000000;
   text-align: center;
   transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-
+  text-overflow: ellipsis;
+  overflow: hidden;
 
   @include underLaptopLarge {
     font-size: 2.5rem;
@@ -83,6 +84,7 @@
   background-size: cover;
   text-decoration: none;
   filter: sepia(100%);
+  text-overflow: ellipsis;
 
   .postTitle {
     filter: none !important;
