--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -12,7 +12,7 @@
 
   }
 
-  h2 {
+  h3 {
     text-align: center;
     margin: 0 0 50px 0;
     padding: 0 50px;
@@ -50,19 +50,14 @@
   }
 
   @include underTablet {
-    grid-template-rows: repeat(4, 300px);
-    max-width: 300px;
-    grid-template-areas:
-      "spotify spotify"
-      "youtube youtube"
-      "apple-music apple-music"
-      "deezer deezer";
+    grid-template-rows: repeat(2, 200px);
+    max-width: 400px;
   }
 
-  /*@include underMobileLarge {
-    grid-template-rows: repeat(4, 200px);
-    max-width: 200px;
+  @include underMobileLarge {
+    grid-template-rows: repeat(2, 150px);
+    max-width: 300px;
+    grid-gap: 10px;
 
-  }*/
-
+  }
 }
