--- a/styles/GallerySubPage.module.scss
+++ b/styles/GallerySubPage.module.scss
@@ -40,13 +40,19 @@
 }
 
 .image {
-  width: 100%;
+  width: 100% !important;
+  height: auto !important;
   display: block;
 
   &:hover {
     cursor: pointer;
     opacity: 0.6;
   }
+}
+
+.imagePlaceholder {
+  width: 100% !important;
+  min-height: 500px;
 }
 
 .viewedImageContainer {
