--- a/styles/GallerySubPage.module.scss
+++ b/styles/GallerySubPage.module.scss
@@ -64,7 +64,12 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%),
+  transform: translate(-50%, -50%);
+
+  &:focus-visible {
+    outline: none;
+    box-shadow: none;
+  }
 }
 
 .viewedImage {
