--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,30 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap');
-@import "./variables";
+@import './variables';
+@import './mixins';
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html,
 body {
-  color: white;
-  background-color: $black;
-  padding: 0;
-  height: 100%;
-  margin: 0;
-  font-family: 'Roboto Mono', sans-serif;
+	color: white;
+	background-color: $black;
+	padding: 0;
+	height: 100%;
+	margin: 0;
+	font-family: 'Roboto Mono', sans-serif;
 
-  #__next {
-    height: 100%;
-  }
+	#__next {
+		height: 100%;
+	}
 }
 
 h1 {
-  font-size: 4rem;
-  text-align: center;
+	font-size: 4rem;
+	text-align: center;
+
+	@include underTablet {
+		font-size: 3rem;
+	}
+
+	@include underMobileLarge {
+		font-size: 2rem;
+	}
 }
 
 a {
-  color: $textWhite;
+	color: $textWhite;
 }
