--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -2,37 +2,53 @@
 @import '../../styles/mixins';
 
 .container {
-  background-color: $black;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px 0;
-  position: relative;
-  gap: 30px;
-  margin-top: 50px;
+	background-color: $black;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 50px 0;
+	position: relative;
+	gap: 30px;
+	margin-top: 50px;
 
-  @include underTablet {
-    padding: 60px 0;
-  }
+	@include underTablet {
+		padding: 60px 0;
+	}
 }
 
 .copyright {
-  //margin-top: 20px;
+	//margin-top: 20px;
 }
 
 .upperDivider {
-  height: 2px;
-  width: 600px;
-  position: absolute;
-  top: 0;
-  background-color: $textWhite;
+	height: 2px;
+	width: 600px;
+	position: absolute;
+	top: 0;
+	background-color: $textWhite;
 
-  @include underLaptop {
-    width: 400px;
-  }
+	@include underLaptop {
+		width: 400px;
+	}
 
-  @include underPixel(600) {
-    width: 200px;
-  }
+	@include underPixel(600) {
+		width: 200px;
+	}
+}
+
+.linkContainer {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+.dotSeparator {
+	$size: 5px;
+	height: $size;
+	width: $size;
+	background-color: $textWhite;
+	border-radius: 50%;
 }
