--- a/styles/Impressum.module.scss
+++ b/styles/Impressum.module.scss
@@ -5,6 +5,10 @@
 	max-width: 1000px;
 	padding-left: 10px;
 	padding-right: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 15px;
 
 	@include underLaptop {
 		max-width: 768px;
@@ -25,8 +29,11 @@
 		}
 	}
 
+	span {
+		text-align: center;
+	}
+
 	ul {
-		width: max-content;
 		margin: 0 auto;
 	}
 
