--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,41 +1,41 @@
 @mixin underPixel($pixel) {
-	@media only screen and ('max-width: {$pixel}px') {
+	@media only screen and (max-width: #{$pixel}px) {
 		@content;
 	}
 }
 
 @mixin underLaptopLarge {
-	@media only screen and ('max-width: 1440px') {
+	@media only screen and (max-width: 1440px) {
 		@content;
 	}
 }
 
 @mixin underLaptop {
-	@media only screen and ('max-width: 1024px') {
+	@media only screen and (max-width: 1024px) {
 		@content;
 	}
 }
 
 @mixin underTablet {
-	@media only screen and ('max-width: 768px') {
+	@media only screen and (max-width: 768px) {
 		@content;
 	}
 }
 
 @mixin underMobileLarge {
-	@media only screen and ('max-width: 425px') {
+	@media only screen and (max-width: 425px) {
 		@content;
 	}
 }
 
 @mixin underMobileMedium {
-	@media only screen and ('max-width: 375px') {
+	@media only screen and (max-width: 375px) {
 		@content;
 	}
 }
 
 @mixin underMobileSmall {
-	@media only screen and ('max-width: 320px') {
+	@media only screen and (max-width: 320px) {
 		@content;
 	}
 }
