--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,18 +1,18 @@
 @import 'styles/mixins';
 
 .container {
-  position: relative;
-  min-height: 100%;
+	position: relative;
+	height: 100%;
 }
 
 .padding {
-  padding-top: 150px;
+	padding-top: 150px;
 
-  @include underTablet {
-    padding-top: 80px;
-  }
+	@include underTablet {
+		padding-top: 80px;
+	}
 
-  @include underMobileLarge {
-    padding-top: 0;
-  }
+	@include underMobileLarge {
+		padding-top: 0;
+	}
 }
