--- a/components/DynamicHero/DynamicHero.module.scss
+++ b/components/DynamicHero/DynamicHero.module.scss
@@ -2,19 +2,52 @@
 	display: flex;
 	height: 100%;
 	width: 100%;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	margin: auto 0;
 	z-index: 2000;
+	gap: 30px;
+
+	* {
+		z-index: inherit;
+		margin: 0;
+
+		/* Disable text selection */
+		-webkit-user-select: none; /* Safari */
+		-ms-user-select: none; /* IE 10 and IE 11 */
+		user-select: none; /* Standard syntax */
+	}
 }
 
 .video {
 	z-index: 0;
-	position: absolute;
+	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
 	display: block;
 	object-fit: cover;
+}
+
+.titleImage {
+	max-width: 1000px;
+	width: 70%;
+}
+
+.subtitle,
+.title {
+	text-align: center;
+}
+
+.title {
+	font-size: 3rem;
+}
+
+.subtitle {
+}
+
+.link {
+	padding: 15px;
 }
