feat: theme converted to childtheme

--- a/app/wp-content/themes/akiralyhalott/style.css
+++ b/app/wp-content/themes/akiralyhalott/style.css
@@ -1,6 +1,7 @@
 /*
 
 Theme Name: A Király Halott
+Template: botiga
 Author: Balázs Venyige
 Author URI: https://www.linkedin.com/in/bal%C3%A1zs-venyige-074300196/
 Description: A block theme for the website of "A Király Halott"
