--- a/app/globals.css
+++ b/app/globals.css
@@ -3,21 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #e1e1e1;
+  --foreground: #2b2c2d;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--background, #e1e1e1);
+  color: var(--foreground, #2b2c2d);
 }
 
 @layer utilities {
