--- a/app/globals.css
+++ b/app/globals.css
@@ -62,3 +62,94 @@ body {
 .link-button.light {
   @apply border-gray-800 bg-[var(--background)] text-black hover:bg-gray-200;
 }
+
+/* Concerts table */
+.main-page-concerts-grid {
+  @apply flex flex-col gap-[8vw];
+}
+
+.concert-row {
+  @apply grid grid-cols-4 gap-y-[2vw];
+}
+
+.concert-row > .date-column {
+  @apply col-span-3;
+}
+
+.concert-row > .date-column > span {
+  @apply text-[2.77vw] font-light leading-[3.33vw];
+}
+
+.concert-row > .display-name {
+  @apply col-span-3;
+}
+
+.concert-row > .display-name > p {
+  @apply max-w-[65vw] overflow-hidden text-ellipsis whitespace-nowrap text-[5.5vw] font-extrabold uppercase leading-[6.67vw];
+}
+
+.concert-row > .venue {
+  @apply col-span-3 flex;
+}
+
+.concert-row > .venue > span {
+  @apply w-full overflow-hidden text-ellipsis whitespace-nowrap text-[2.77vw] font-light leading-[3.33vw];
+}
+
+.concert-row > .tickets {
+  @apply col-start-4 row-span-3 row-start-1 flex flex-col justify-end;
+}
+
+.concert-row > .tickets > a {
+  @apply rounded-[13.05vw] border-2 border-[#CDCDCD] px-[3.61vw] py-[2.78vw] text-[3.61vw] leading-[4.33vw];
+}
+
+@screen lg {
+  .main-page-concerts-grid {
+    @apply gap-[2.5vw];
+  }
+
+  .concert-row {
+    @apply grid-cols-[8vw_1fr_1fr_auto] gap-x-[1vw];
+  }
+
+  .concert-row > .date-column,
+  .concert-row > .display-name,
+  .concert-row > .venue,
+  .concert-row > .tickets {
+    @apply col-span-1 col-start-auto row-span-1 row-start-auto;
+  }
+
+  .concert-row > .date-column {
+    @apply flex items-center;
+  }
+
+  .concert-row > .date-column > span {
+    @apply text-[0.57vw] leading-[0.72vw];
+  }
+
+  .concert-row > .display-name {
+    @apply flex min-w-0 justify-start;
+  }
+
+  .concert-row > .display-name > p {
+    @apply lg:max-w-none lg:text-[1.25vw] lg:leading-[1.56vw];
+  }
+
+  .concert-row > .venue {
+    @apply flex min-w-0 items-end justify-end pr-[1vw];
+  }
+
+  .concert-row > .venue > span {
+    @apply max-w-max text-[0.57vw] leading-[0.72vw];
+  }
+
+  .concert-row > .tickets {
+    @apply lg:flex lg:items-center lg:justify-end;
+  }
+
+  .concert-row > .tickets > a {
+    @apply lg:rounded-none lg:border-b-[0.05vw] lg:border-l-0 lg:border-r-0 lg:border-t-0;
+    @apply lg:border-[#2B2C2D] lg:p-0 lg:text-[0.78vw] lg:leading-[0.94vw];
+  }
+}
